Info modal updated

--- a/index.html
+++ b/index.html
@@ -27,18 +27,21 @@
       <li><a href="#" class="stopbreak-btn button radius round success">Get back to work!</a></li>
     </ul>        
     <footer>
-      <a href="#" data-reveal-id="infoModal" class="infolink"><i class="fi-info"></i></a>
+      <a href="#openModal" class="infolink"><i class="fi-info"></i></a>
     </footer>
 
-    <div id="infoModal" class="reveal-modal" data-reveal> 
-      <p class="lead">Twentyfive</p> 
-      <p>A Pomodoro&reg; timer app. </p> 
-      <p>https://twitter.com/mpedriale</p>
-      <p>pomodorotechnique.com</p>
-      <p>Developer: mamoo</p>
-      <p>Fonts: Alex Brush, Monofonto</p>
-      <a class="close-reveal-modal">&#215;</a>
-    </div>
+    <div id="openModal" class="modalDialog">      
+      <a href="#close" title="Close" class="close"><span class="link-overlay"></span></a>
+      <div>
+        <h2>Twentyfive</h2> 
+        <p>
+        A Pomodoro&reg; timer app, based on pomodorotechnique.com</p>
+        <p>
+        Code is open source and available at:<br>
+        http://mamoo.github.io/Twentyfive/<br>
+        Fonts: Alex Brush, Monofonto</p>
+      </div>
+    </div>    
 
     <script src="/assets/js/jquery.js"></script>
     <script src="/assets/js/foundation.min.js"></script>
