Removed absolute path references.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TwentyFive</title>
-    <link rel="stylesheet" href="/assets/css/foundation.min.css" />
-    <link rel="stylesheet" href="/assets/fonts/foundation-icons/foundation-icons.css" />
-    <link rel="stylesheet" href="/assets/css/twentyfive.css" />
-    <script src="/assets/js/modernizr.js"></script>
+    <link rel="stylesheet" href="./assets/css/foundation.min.css" />
+    <link rel="stylesheet" href="./assets/fonts/foundation-icons/foundation-icons.css" />
+    <link rel="stylesheet" href="./assets/css/twentyfive.css" />
+    <script src="./assets/js/modernizr.js"></script>
   </head>
   <body>
 
@@ -43,10 +43,10 @@
       </div>
     </div>    
 
-    <script src="/assets/js/jquery.js"></script>
-    <script src="/assets/js/foundation.min.js"></script>
-    <script src="/assets/js/foundation.reveal.js"></script>
-    <script src="/assets/js/twentyfive.js"></script>
+    <script src="./assets/js/jquery.js"></script>
+    <script src="./assets/js/foundation.min.js"></script>
+    <script src="./assets/js/foundation.reveal.js"></script>
+    <script src="./assets/js/twentyfive.js"></script>
     <script>
       $(document).foundation();
     </script>
